# mcp-security-workshop

./: README.md  pyproject.toml  threat-model.md
acmeops_server/: .gitignore  __main__.py  server.py
acmeops_server/data/: tickets.jsonl
acmeops_server/data/customers/: CUST-1.md  CUST-42.md  CUST-99.md
acmeops_server/tools/: customers.py  db.py  email.py  github_proxy.py  tickets.py
diagnostic/: STUDENT_INSTRUCTIONS.md  acme-security-brief.md
diagnostic/server-a/: server.py
diagnostic/server-b/: server.py
diagnostic/server-c/: server.py  tool_descriptions.yml
fake_authz_server/: __main__.py  app.py
fake_authz_server/keys/: private.pem  public.pem
scripts/: auth_demo.py  manifest_lock.py  test_rugpull.py
summarizer_server/: __main__.py  server.py
tier3-build/: ATTACK_RUNBOOK.md  THREAT_BRIEF_TEMPLATE.md  VULNERABILITY_MENU.md
tier3-build/scaffold/: README.md  server.py
